# nemo-wake

./: .dockerignore  .gitignore  .gitmodules  LICENSE  Makefile  NOTES.md  README.md  RESULTS.md  pyproject.toml
data/: README.md  manifest.json
data/annotations/: README.md  book01_ep01_pos.jsonl  book01_ep01_sigla.json  book01_ep02_sigla.json  book01_ep05_sigla.json  book02_ep02_sigla.json  fweet_corrections.json  hiberno_english_rules.json
docs/: history.md
lexicons/: ep1_fweet_gallery.json  ep1_page3_gallery.json  ep1_phoneme_gallery.json  i6_multilingual_top5.json  morpheme_phon_demo.json  page3_mix.json  page3_portmanteau_gallery.json  passencore_seg_disagree.json  phoneme_phon_balanced.json  phoneme_phon_demo.json
results/: idea2_final_comparison.json
results/baselines/: cap100.json  cap25.json  uncapped.json
results/mlctx_ngram2_20260530-003720/: config.json  results.json
results/mlctx_ngram2_20260530-100148/: config.json  results.json
results/ngram1_phon_20260529-170445/: config.json  results.json
results/ngram1_phon_20260529-214647/: config.json  results.json  three_lens_compare.json
scripts/: Dockerfile  requirements.txt
shared/: README.md  annotations.py  corpus.py  fweet.py  ipa.py  tokenizers.py
src/: _common.py  activation_alignment.py  baseline_attribution.py  context_inhibition.py  evaluate_attribution.py  fweet_compare.py  replicate_lex.py  replicate_morpheme_phon.py  replicate_multilingual_context.py  replicate_ngram_phon.py  replicate_phoneme_phon.py  replicate_svo.py  replicate_vso.py  superposition_testbed.py
(+28 files in other folders)
